--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@ nav .active, .btn:hover {
             </div>
             <div class="col-sm-4 ">
               <div class="card " >
-                <img src="./images/tv.png" class="card-img-top w-50" alt="...">
+                <img src="./tv.png" class="card-img-top w-50" alt="...">
                 <div class="card-body ">
                   <h5 class="card-title text-primary">Contrary to popular</h5>
                   <p class="card-text text-secondary">Some quick example text to build on the card build on the card.</p>
